# sseer

./: Cargo.toml  LICENSE-Apache.txt  LICENSE-MIT.txt  README.md  credits.md
benches/: bench.rs  consts.rs  es_parser.rs  event_stream.rs
examples/: memory_usage.rs  reqwest.rs
scripts/: criterion_to_markdown.py
src/: constants.rs  errors.rs  event.rs  event_stream.rs  json_stream.rs  lib.rs  parser.rs  reqwest.rs  retry.rs  utf8_stream.rs
src/errors/: reqwest.rs
src/event_stream/: bytes.rs  generic.rs
