[package]
name = "sseer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.11.0", default-features = false }
bytes-utils = { version = "0.1.4", default-features = false }
futures-core = { version = "0.3.31", default-features = false }
futures-timer = { version = "3.0.3", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
memchr = { version = "2.7.6", default-features = false }
pin-project-lite = { version = "0.2.16", default-features = false }
reqwest = { version = "0.13.1", features = [
    "stream",
], default-features = false, optional = true }

[features]
default = ["std"]
reqwest = ["dep:reqwest", "std"]
std = []

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["full"] }
