[package]
name = "sseer"
version = "0.1.7"
authors = ["Adam Stopher <adam.stopher@protonmail.com>"]
edition = "2024"
resolver = "3"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SneedSeedFeed/sseer.git"
description = "Various helpers for getting Event streams out of your SSE responses"
documentation = "https://docs.rs/sseer"
keywords = ["sse", "eventsource", "reqwest", "stream", "event"]
categories = [
    "no-std",
    "parsing",
    "asynchronous",
    "web-programming::http-client",
]


[dependencies]
bytes = { version = "1.11.1", default-features = false }
bytes-utils = { version = "0.1.4", default-features = false }
futures-core = { version = "0.3.31", default-features = false }
futures-timer = { version = "3.0.3", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
memchr = { version = "2.8.0", default-features = false }
pin-project-lite = { version = "0.2.16", default-features = false }
reqwest = { version = "0.13.2", features = [
    "stream",
], default-features = false, optional = true }
serde = { version = "1.0.228", default-features = false, optional = true }
serde_json = { version = "1.0.149", default-features = false, optional = true }
serde_path_to_error = { version = "0.1.20", default-features = false, optional = true }


[features]
default = []
reqwest = ["dep:reqwest", "std"]
std = []
json = [
    "dep:serde",
    "dep:serde_path_to_error",
    "dep:serde_json",
    "serde_json/std",
    "std",
]


[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
eventsource-stream = "0.2.3"
futures = "0.3.31"
nom = { version = "7.1", default-features = false }
tokio = { version = "1.49.0", features = ["full"] }

[[bench]]
name = "bench"
harness = false

[[example]]
name = "reqwest"
required-features = ["reqwest"]

[[example]]
name = "memory_usage"
